# learningrigidity

./: .gitignore  Dockerfile  README.md  SimpleLoader.py  dataset_description.md  geometry.py  io_utils.py  pose_refine.py  run_container.sh  run_inference.py
data/market_5/camdata_left/: frame_0010.cam  frame_0011.cam
data/market_5/depth/: frame_0011.dpt  frame_0012.dpt
external_packages/correlation-pytorch-master/: make_cuda.sh
external_packages/correlation-pytorch-master/correlation-pytorch/: .gitignore  build.py
external_packages/correlation-pytorch-master/correlation-pytorch/correlation_package/_ext/corr/: __init__.py
external_packages/correlation-pytorch-master/correlation-pytorch/correlation_package/src/: .gitignore
external_packages/flow2pose/: CMakeLists.txt  README.md  estimate_pose.cpp
external_packages/flow2pose/flow2pose_lib/: flow2pose.cpp  flow2pose.h  py_flow2pose.cpp  pyboost_cv2_converter.cpp  pyboost_cv3_converter.cpp
external_packages/flow2pose/flow2pose_lib/ransac/: Ransac-inl.h  Ransac.h  sacCommon.h
models/: PWCNet.py  RigidityNet.py
setup/: install_for_network.sh  install_for_refinement.sh  rigidity.yml
